@@ -1,5 +1,7 @@
 2012-05-25  Miloslav Trmač  <mitr@redhat.com>
 
+	* tmpwatch.c (cleanupDirectory): Simplify control flow a little.
+
 	* tmpwatch.c (check_fuser, cleanupDirectory): Remove unnecessary
 	parentheses.
 
